k8s/auth-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-server
  ports:
    - port: 4000
      targetPort: 4000
