k8s/resource-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: resource-server
  ports:
    - port: 5000
      targetPort: 5000
